--- a/src/App.css
+++ b/src/App.css
@@ -144,8 +144,9 @@ images-conatiner {
 
 .img {
   float: left;
-  width: 33.33%;
-  padding: 5px;
+  width: 46%;
+  padding: 10px;
+  margin: 20px 10px 10px;
 }
 
 .row::after {
